--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,20 @@ footer { padding: 3rem 1rem 1rem 1rem; text-align: center;}
 
 nav * { margin: 0; }
 
+#login-state {
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	flex-direction: row;
+	place-items: center;
+	justify-content: center;
+}
+
+#nome-utente {
+	font-weight: bold;
+}
+
 span.topic {
 	padding: 0rem;
 	display: grid;
