--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@
 	--light: #ffffff;
 	--gray: #e4e4e4;
 	--dark: #212121;
+	--incomplete: #ffa500;
 }
 
 html {
@@ -47,11 +48,9 @@ nav * { margin: 0; }
 	place-items: center;
 	float: center;
 }
+
 #welcome-text a,span,p {
 	margin-bottom: 0;
-}
-#nome-utente {
-	font-weight: bold;
 }
 
 span.topic {
@@ -82,10 +81,10 @@ button#add-topic {
 	font-size: 1.2rem;
 	padding: 0.5rem 0rem;
 	width: 100%;
-	background-color: var(--light);
 	border: none;
 	margin-top: 1rem;
-	background-color: var(--lighter-accent);
+	background-color: var(--gray);
+	cursor: pointer;
 
 	transition: all 100ms ease-in-out;
 }
@@ -124,8 +123,14 @@ span.chip label {
 	transition: transform 200ms ease-in;
 }
 
-#submit:hover {
+#submit:not([disabled]):hover {
 	transform: translateY(-0.1rem);
+}
+
+#submit[disabled] {
+	color: var(--light);
+	background-color: var(--gray);
+	cursor: not-allowed;
 }
 
 div#second-day {
@@ -217,6 +222,20 @@ nav a {
 		padding-top: 1rem;
 		text-align: center;
 	}
+}
+
+.incomplete { color: var(--incomplete); }
+
+#teachers-field.incomplete, #topic-field.incomplete { color: inherit; }
+
+#teachers-field.incomplete::before {
+	content: 'I professori devono essere almeno 1 e al massimo 3';
+	color: var(--incomplete);
+}
+
+#topic-field.incomplete::before {
+	content: "Gli ordini del giorno devono essere almeno 3 e al massimo 6";
+	color: var(--incomplete);
 }
 
 img.logo.small { display: none; }
